--- a/giveawayBlog.html
+++ b/giveawayBlog.html
@@ -83,6 +83,382 @@
 				    <div class="media">
 						<div class="textarea">
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
+<br>						🔰COMPLETE CEHV10 ~ THE ETHICALHACKING TUTORIALS🔰
+<br>
+<br>						💖1. An introduction to ethical hacking! What is it:
+<br>						┕Introduction
+<br>						┕Why learn to hack
+<br>
+<br>						💖2. Setting up the lab environment:
+<br>						┕Laboratory. Introduction.
+<br>						┕Installing Kali Linux using a pre-built image
+<br>						┕Installing Kali Linux Using ISO Image
+<br>						┕Installing Windows
+<br>						┕Installing Metasploitable
+<br>						┕How to take pictures
+<br>
+<br>						💖3. Basics of Kali Linux:
+<br>						┕Kali Linux Review
+<br>						┕Terminal and basic Linux commands
+<br>						┕Updating the source list and installing programs
+<br>
+<br>						💖4. Network Penetration Testing:
+<br>						┕Network Penetration Testing Introduction
+<br>						┕How networks work
+<br>						┕Connecting a wireless adapter
+<br>						┕Changing the MAC address
+<br>
+<br>						💖5. Network Penetration Testing - Pre-Connection Attacks:
+<br>						┕Sniffing packets with Airodump-ng1
+<br>						┕Targeted packet listening with Airodump-ng1
+<br>						┕De-authentication attack (disconnecting any device from the network)
+<br>						┕Creating a fake hotspot - theory
+<br>						┕Making a fake hotspot is practical
+<br>
+<br>						💖6. Network penetration testing - gaining access to networks:
+<br>						┕Gaining access to networks Introduction
+<br>						┕Cracking WEP encryption - theory
+<br>						┕Cracking WEP Encryption (Basic Case)
+<br>						┕Cracking WEP encryption (fake authentication)
+<br>						┕Cracking WEP Encryption (ARP Replay Attack)
+<br>						┕Hacking WPA & WPA2 Encryption (WPS Exploitation) - Theory
+<br>						┕Cracking WPA & WPA2 Encryption (WPS Exploitation) - Practical
+<br>						┕Cracking WPA and WPA2 Encryption (Using Wifite)
+<br>						┕Hacking WPA & WPA2 Encryption (handshake capture) - theory
+<br>						┕WPA and WPA2 encryption (handshake capture) - practical
+<br>						┕Building a word list with Crunch
+<br>						┕Launching a wordlist attack to crack WPA and WPA2 passwords
+<br>						┕Protect yourself from attacks from above
+<br>
+<br>						💖7. Network Penetration - Post-Connection Attacks:
+<br>						┕An introduction to email attacks
+<br>						┕Collecting information with Netdiscover
+<br>						┕An introduction to nmap and how to use it
+<br>						┕Network scan using nmap
+<br>						┕Network Scanning Using Zenmap
+<br>						┕MITM Attack - ARP Poisoning (theory)
+<br>						┕MITM Attack - ARP Poisoning Using arpspoof
+<br>						┕MITM attack - ARP poisoning using MITMf
+<br>						┕Bypass HTTPS using MITMf
+<br>						┕Session hijacking and stealing cookies
+<br>						┕DNS spoofing using MITMF
+<br>						┕Capture keystrokes and run any code in Target browser
+<br>						┕Launching MITM attacks in a real environment
+<br>						┕Basic overview of Wireshark
+<br>						┕Capturing and analyzing packets with Wireshark
+<br>						┕Reading usernames, passwords and cookies from the capture package
+<br>
+<br>						💖8. Network Penetration - Detection and Security:
+<br>						┕Detection of ARP poisoning attacks
+<br>						┕Detecting Suspicious Activity with Wireshark
+<br>
+<br>						💖9. Gaining access to computers - server side attacks:
+<br>						┕Introduction to Gaining Access to Computers
+<br>						┕Introduction to Server Side Attacks
+<br>						┕Gathering information and using misconfiguration
+<br>						┕Using a public exploit to compromise the server
+<br>						┕Exploiting a Remote Code Execution Vulnerability
+<br>						┕Installing and Configuring the Metasploit Community
+<br>
+<br>						🔻L!NK :- <a href="bit.ly/ABCD0347">Touch Here</a>
+<br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
+<br>						CYBER SECURITY BOOKS
+<br>						<a href="https://drive.google.com/open?id=179D_slEOLXWOTeFdmRrMkdV8C4DSLdYT">Touch Here</a>
+<br>
+<br>						CISSP             
+<br>						<a href="https://drive.google.com/open?id=1OTCyiNN7Km-ZFN_ciDAHGmEeKhyaXrnC">Touch Here</a>
+<br>
+<br>						CISM                  
+<br>						<a href="https://drive.google.com/open?id=1-Vhz0RPtSnLXfpMcLyirSBPCE3BfcfIm">Touch Here</a>
+<br>
+<br>						CISA               
+<br>						<a href="https://drive.google.com/open?id=1vf5E7Yd09km31ZzcJ2_F0VH0hWRMEi8O">Touch Here</a>
+<br>
+<br>						CRISC                  
+<br>						<a href="https://drive.google.com/open?id=1ThyyDGQUhd1gZD92synPGLwK4v0sugcv">Touch Here</a>
+<br>
+<br>						CEH                 
+<br>						<a href="https://drive.google.com/open?id=18uplnigsTyLHFwEBiY2vcHDYQfFo4NVf">Touch Here</a>
+<br>
+<br>						CCNA SECURITY        
+<br>						<a href="https://drive.google.com/open?id=14atH7h_WUDpCu_ePtGJysnAcHOAolOf_">Touch Here</a>
+<br>
+<br>						CCDA                  
+<br>						<a href="https://drive.google.com/open?id=17ChJX5uTL-MXO--haZNzYDubELvcJppV">Touch Here</a>
+<br>
+<br>						CMMI                 
+<br>						<a href="https://drive.google.com/open?id=1Vu61J3x7PssHJbGLCO1CM4Uf5HwC8OzB">Touch Here</a>
+<br>
+<br>						AZURE                
+<br>						<a href="https://drive.google.com/open?id=1hBkIuBjePJmzHgt4Fg7Vglv6_YYPNNPA">Touch Here</a>
+<br>
+<br>						AWS                 
+<br>						<a href="https://drive.google.com/open?id=1xu0wB2f7Xc6d1NuQ6yP9vxBFVXo1WoIj">Touch Here</a>
+<br>
+<br>						FIREWALLS          
+<br>						<a href="https://drive.google.com/open?id=1_6y_KzHsV-de3r8zzcMnTdrKemPs1XZM">Touch Here</a>
+<br>
+<br>						AGILE, COBIT, TOGAF 
+<br>						<a href="https://drive.google.com/open?id=1VnHqXYj-d2tAFJsAPw2NnFVsTnm_aGvt">Touch Here</a>
+<br>
+<br>						🔺Share And Support Us🔻
+<br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
+<br>						🔰 Deep Web- The Complete Introduction To The Hidden Web 🔰
+<br>
+<br>						learn to navigate on the deep web on a daily basis.
+<br>
+<br>						Link :- <a href="https://www.udemy.com/course/the-complete-introduction-to-the-deep-web/?couponCode=D0631B2DD2192A858C14&ranMID=39197&ranEAID=NuZiHLoAApo&ranSiteID=NuZiHLoAApo-x3FA152mwzE.aGwZ5wdr5Q&LSNPUBID=NuZiHLoAApo&utm_source=aff-campaign&utm_medium=udemyads">Touch Here</a>
+<br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
+<br>						🔥 How To Use Bins | Noob Friendly 🔥
+<br>
+<br>						Steps are pretty easy:
+<br>
+<br>						Take bins
+<br>
+<br>						Goto namso-gen.com and drop your details (bin,cvv,expiry)
+<br>
+<br>						Generate too many bins and then check all the bins, how many are working. using <a href="https://mrchecker.net/card/ccn2/">Touch Here</a>
+<br>
+<br>						Change your IP using any VPN (server which is given in bins)
+<br>
+<br>						For the name and address <a href="https://www.fakeaddressgenerator.com/">Touch Here</a>
+<br>
+<br>						Then you can use those bins for the trial version and more.
+<br>
+<br>						Enjoy 👍❤️
+<br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
+<br>						FULL COURSE ON HOW TO SAFELY SEARCH DEEP/DARK WEB
+<br>
+<br>						You Can Learn :
+<br>
+<br>						🔹How to safely eplore Dark web
+<br>						🔹Bitcoin And Crypto Usage On Dark Web
+<br>						🔹How to host a site on Dark Web
+<br>						🔹How to access Dark Web on Android
+<br>						🔹And Much More
+<br>
+<br>						🔗 LINK :-  <a href="https://mega.nz/folder/figmjSiD#zIHXM7OR3smYzmQnJmmqkA">Touch Here</a>
+<br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
+<br>						🔰Complete Metasploit Course: Beginner to Advance🔰
+<br>
+<br>						Course content:
+<br>						4 sections • 30 lectures • 2h 40m total length
+<br>
+<br>						🔗Link:
+<br>						--> <a href="https://mega.nz/file/ackEFCIR#4YxxebsRILMAacVyjoHHS-Su8ByR3Q22n6hfZ1chmWE">Touch Here</a>
+<br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
+<br>						[GIVEAWAY] - Microsoft Store - 27 Apps for free
+<br>
+<br>						<a href="https://www.microsoft.com/en-us/store/deals/apps/pc?ocid=AID2000142_aff_7593_1243925&price=0To0.01">Touch Here</a>
+<br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
+<br>						😍UDEMY LEARN WEBSITE HACKING COURSE [1.87GB]😍
+<br>
+<br>
+<br>						1️⃣ Preparation - Creating A Penetration Testing Lab
+<br>						2️⃣ Prepataion - Linux Basics
+<br>						3️⃣ Website Basics
+<br>						4️⃣ Information Gathering
+<br>						5️⃣ File Upload Vulnerabilities
+<br>						6️⃣ Code Execution Vulnerabilities
+<br>						7️⃣ Local File Inclusion Vulnerabilities
+<br>						8️⃣ Remote Files Inclusion Vulnerabilities
+<br>						9️⃣ SQL Injection Vulnerabilities
+<br>						🔟 XSS Vulnerabilities
+<br>						1️⃣1️⃣ Insecure Session Management
+<br>						1️⃣2️⃣ Bruteforce Dictionary Attacks
+<br>						1️⃣3️⃣ Discovering Vulnerabilities Automatically Using Owaps ZAP
+<br>						1️⃣4️⃣ Post Exploitation
+<br>						1️⃣5️⃣ Bonus Section
+<br>
+<br>						Download link:-
+<br>						<a href="https://mega.nz/folder/3ipEGIzZ#VAvV7N8XZHD-sZ3RULvI9g">Touch Here</a>
+<br>
+<br>						💥 Knowledge is the new God 💥
+<br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
+<br>						​​🔰 45+GB Course (Pentester Academy ) 🔰
+<br>
+<br>						⭕️ 45+GB Pentester Academy Courses Including all types.
+<br>
+<br>						🌀 Link : <a href="https://bit.ly/2Yh1bjY">Touch Here</a>
+<br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
+<br>						😍Another Bug Bounty Pacakge😍
+<br>
+<br>
+<br>						❗Bug Bounty Hunting: Guide to an Advanced Earning Method
+<br>						<a href="https://drive.google.com/drive/folders/1t-hTqg0-02t0cnc5SypHnb8t3CfE3bXU">Touch Here</a>
+<br>
+<br>						❗Bug Bounty: Android Hacking
+<br>						<a href="https://mega.nz/#F!h4hHGIYa!2ta4n94iQNnVzpJToVPLVw">Touch Here</a>
+<br>
+<br>						❗Bug Bounty : Web Hacking
+<br>						<a href="https://drive.google.com/file/d/1Z6vX133ZA5DGIhrBJAuJfMJ2Gu7Y4C21/edit">Touch Here</a>
+<br>
+<br>						❗Burp Suite Bug Bounty Web Hacking from Scratch
+<br>						<a href="https://drive.google.com/file/d/1eWy5HVLw3tvw4lfsT7kYb5dnD1l0RsoW/view">Touch Here</a>
+<br>
+<br>						❗Bug Bounty Hunting - Offensive Approach to Hunt Bugs
+<br>						<a href="https://mega.nz/#F!Ge4gmSIL!lW-7XC2DnEKryjXie35APw!mGw30bCI">Touch Here</a>
+<br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
+<br>						🔰 Hack Pack V3 | The Biggest Collection 🔰
+<br>
+<br>						<a href="https://mega.nz/folder/AnoDUbaa#OJBICNlxDgg5uvgmDIWIGA">Touch Here</a>
+<br>
+<br>						Enjoy 👍❤️
+<br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
+<br>						Python All
+<br>						<a href="https://mega.nz/folder/oBF3waBI#c3tJXdpSlb8J6Dfvx1o3IQ">Touch Here</a>
+<br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
+<br>						❤️Dedsec All Courses❤️
+<br>
+<br>						🔰BlackHat Hacking Course By DedSec🔰
+<br>
+<br>						🔰Antivirus Evasion Course By DedSec🔰
+<br>
+<br>						🔰Complete Course Of Android Hacking By DedSec🔰
+<br>
+<br>						🔰Complete Course Of Kali Linux By DedSec🔰
+<br>
+<br>						🔰Complete Course Of WiFi Hacking By DedSec🔰
+<br>
+<br>						🔰ERC Course By DedSec🔰
+<br>
+<br>						🔰Facebook And Instagram Hacking Course By DedSec🔰
+<br>
+<br>						🔰Online Account cracking Course By DedSec🔰
+<br>
+<br>						🔰Reverse Engineering Course By DedSec🔰
+<br>
+<br>						🔰Dedsec Latest Fud Ransomware🔰
+<br>
+<br>						🔰Spamming Course 🔰
+<br>
+<br>						DOWNLOAD LINK:- 
+<br>
+<br>						<a href="https://drive.google.com/drive/u/0/mobile/folders/1k_GdJtXMC-xyG-Rk-H0qEnqxZwX1R1p3">Touch Here</a>
+<br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
+<br>                        😍 WORLD MOST DANGEROUS & POWERFULL HACKERS TOOLS EXPOSE 😍
+<br>
+<br>                        ..
+<br>
+<br>                        ⚠️Only for learning & Educational Purpose ⚠️
+<br>
+<br>                        Pish web tool
+<br>                        🔗 Link : <a href="https://github.com/Cabdulahi/pish">Touch Here</a>
+<br>
+<br>                        ❇️ MITM attack tool 
+<br>                        🔗 Link : <a href="https://github.com/websploit/websploit">Touch Here</a>
+<br>
+<br>                        ❇️ kill shot pentesting framework
+<br>                        🔗 Link : <a href="https://github.com/bahaabdelwahed/killshot">Touch Here</a>
+<br>
+<br>
+<br>                        ❗️ Facebook Tool Links ❗️
+<br>
+<br>                        ❇️ Facebook information gathering
+<br>                        🔗 Link :  <a href="https://github.com/CiKu370/OSIF">Touch Here</a>
+<br>
+<br>                        ❇️ Facebook Toolkit + bots,  dump private data 
+<br>                        🔗 Link : <a href="https://github.com/warifp/FacebookToolkit">Touch Here</a>
+<br>
+<br>                        ❇️ Facebook cracking tool Fcrack.py 
+<br>                        🔗 Link : <a href="https://github.com/INDOnimous/FB-Crack-">Touch Here</a>
+<br>
+<br>                        ❇️ Facebook and yahoo account cloner 
+<br>                        🔗 Link : <a href="https://gitlab.com/W1nz0N/fyc">Touch Here</a>
+<br>
+<br>                        ❇️ Facebook report tool
+<br>
+<br>                        🔗 Link : <a href="https://github.com/IlayTamvan/Report">Touch Here</a>
+<br>
+<br>                        ❇️ Facebook BruteFoRce Tool
+<br>                        🔗 Link : <a href="https://github.com/IAmBlackHacker/Facebook-BruteForce">Touch Here</a>
+<br>
+<br>                        ⭕️ Facebook hacking ASU
+<br>                        🔗 Link :  <a href="https://github.com/LOoLzeC/ASU">Touch Here</a>
+<br>
+<br>                        ⭕️ Facebook Downloader
+<br>                        🔗 Link : <a href="https://github.com/barba99/facebook-spotify-youtube-descargar">Touch Here</a>
+<br>
+<br>                        ⭕️ Hack Facebook MBF
+<br>                        🔗 Link :  <a href="https://github.com/Rizky-ID/autombf">Touch Here</a>
+<br>
+<br>                        ⭕️ Facebook Repot3
+<br>                        🔗 Link :  <a href="https://github.com/PangeranAlvins/Repot3">Touch Here</a>
+<br>
+<br>                        ⭕️ Facebook Information Gathering
+<br>                        🔗 Link : <a href="https://github.com/xHak9x/fbi">Touch Here</a>
+<br>
+<br>                        ⭕️ Facebook Brute with TOR
+<br>                        🔗 Link : <a href="https://github.com/thelinuxchoice/facebash">Touch Here</a>
+<br>
+<br>                        ❗️Networking Tool Links❗️ 
+<br>
+<br>
+<br>                        ⭕️ ip camera 📷 hacking 
+<br>                        🔗 Link : <a href="https://github.com/kancotdiq/ipcs">Touch Here</a>
+<br>
+<br>                        ⭕️ Termux Lazyscript tool 
+<br>                        🔗 Link : <a href="https://github.com/TechnicalMujeeb/Termux-Lazyscript">Touch Here</a>
+<br>
+<br>                        ⭕️ TMscanner Tool 
+<br>                        🔗 Link : <a href="https://github.com/TechnicalMujeeb/TM-scanner">Touch Here</a>
+<br>
+<br>                        ⭕️ Trace location with IP
+<br>                        🔗 Link : <a href="https://github.com/Rajkumrdusad/IP-Tracer">Touch Here</a>
+<br>
+<br>                        ⭕️ WPS Wi-Fi hacking tool 
+<br>                        🔗 Link : <a href="https://github.com/nxxxu/AutoPixieWps">Touch Here</a>
+<br>
+<br>                        ⭕️ Routersploit - vulnerability scanner and attacker 
+<br>                        🔗 Link : <a href="https://github.com/reverse-shell/routersploit">Touch Here</a>
+<br>
+<br>                        ⭕️ Local network exploiting tool Zarp 
+<br>                        🔗 Link : <a href="https://github.com/hatRiot/zar">Touch Here</a>
+<br>
+<br>                        ⭕️ ip tracker,  Device info by link 
+<br>                        🔗 Link : <a href="https://github.com/lucasfarre/ip-tracker">Touch Here</a>
+<br>
+<br>                        ⭕️ Ip-Fy IP address information
+<br>                        🔗 Link : <a href="https://github.com/T4P4N/IP-FY">Touch Here</a>
+<br>
+<br>                        ⭕️ Wifite Wi-Fi hacking tool
+<br>                        🔗 Link : <a href="https://github.com/derv82/wifite">Touch Here</a>
+<br>
+<br>                        ❗️ Phishing Tool Links ❗️
+<br>
+<br>                        ⭕️ Modern phishing tool hidden eye 
+<br>                        🔗 Link : <a href="https://github.com/DarkSecDevelopers/HiddenEye">Touch Here</a>
+<br>
+<br>                        ⭕️ complete phishing tool 32 templates + 1 customizable 
+<br>                        🔗 Link : <a href="https://github.com/thelinuxchoice/blackeye">Touch Here</a>
+<br>
+<br>                        ⭕️ social media phishing with shellphish
+<br>                        🔗 Link : <a href="https://github.com/thelinuxchoice/shellphish">Touch Here</a>
+<br>
+<br>                        ⭕️ Advance Phishing OTP Bypass
+<br>                        🔗 Link : <a href="https://github.com/Ignitetch/AdvPhishing">Touch Here</a>
+<br>
+<br>                        ⭕️ Paytm Phishing OTP Bypass
+<br>                        🔗 Link : <a href="https://github.com/Ignitetch/Paytm-Phishing">Touch Here</a>
+<br>
+<br>                        ⭕️ UberEats Phishing OTP Bypass
+<br>                        🔗 Link : <a href="https://github.com/Ignitetch/UberEats-Phishing">Touch Here</a>
+<br>
+<br>                        ⭕️ Whats App Phishing 
+<br>                        🔗 Link : <a href="https://github.com/Ignitetch/whatsapp-phishing">Touch Here</a>
+<br>
+<br>                        ⭕️Zomato Phishing 
+<br>                        🔗 Link : <a href="https://github.com/Ignitetch/Zomato-Phishing">Touch Here</a>
+<br>
+<br>                        ⭕️ hotstar OTP Bypass
+<br>                        🔗 Link : <a href="https://github.com/Ignitetch/Hotstar-otp-bypass">Touch Here</a>
+<br>
+<br>                        ⭕️ Ola OTP Bypass
+<br>                        🔗 Link :- <a href="https://github.com/Ignitetch/ola-otpbypass">Touch Here</a>
+<br>
+<br>                        ⭕️ Amazon Payment Gateway Phishing
+<br>                        🔗 Link : <a href="https://github.com/Ignitetch/Amazon-payment-gateway-phishing">Touch Here</a>
+<br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 <br>						🔱MEGA CRACKING PACK VERSION 7🔱
 <br>
 <br>						🔷Account Cracking Tools
