--- a/giveawayBlog.html
+++ b/giveawayBlog.html
@@ -160,7 +160,7 @@
 <br>						┕Exploiting a Remote Code Execution Vulnerability
 <br>						┕Installing and Configuring the Metasploit Community
 <br>
-<br>						🔻L!NK :- <a href="bit.ly/ABCD0347">Touch Here</a>
+<br>						🔻L!NK :- <a href="https://bit.ly/ABCD0347">Touch Here</a>
 <br>						➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖➖
 <br>						CYBER SECURITY BOOKS
 <br>						<a href="https://drive.google.com/open?id=179D_slEOLXWOTeFdmRrMkdV8C4DSLdYT">Touch Here</a>
