completed spelling correction

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <img id="userPhoto" src="assets/images/profile.png" alt="User Photo">
 
     <spam id="userName">@BETA.PROGRAMMER</spam>
-    <span id="tagLine">Welcome to β(Beta) World..!!<br>SEC_RITY is not complited without U..!!</span>
+    <span id="tagLine">Welcome to β(Beta) World..!!<br>SEC_RITY is not completed without U..!!</span>
 
     <div id="links">
         <a class="link" href="giveawayBlog.html" target="_blank" style="border-radius: 25px;"><i
