--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <span id="tagLine">Welcome to β(Beta) World..!!<br>SEC_RITY is not completed without U..!!</span>
 
     <div id="links">
+        <a class="link" href="https://nirsoft.net" target="_blank" style="border-radius: 25px;"><i
+            class="fa fa-link" aria-hidden="true"></i> All Password Stealer Software</a>
         <a class="link" href="giveawayBlog.html" target="_blank" style="border-radius: 25px;"><i
             class="fa fa-globe" aria-hidden="true"></i>Mega Giveaway</a>
         <a class="link" href="Office 2019 & 365 Activator by beta Programmer.cmd" target="_blank" style="border-radius: 25px;"><i
