security update in giveawayBlog.html

--- a/giveawayBlog.html
+++ b/giveawayBlog.html
@@ -1458,8 +1458,13 @@
     <!-- Javascript -->          
     <script src="assets/plugins/jquery-3.3.1.min.js"></script>
     <script src="assets/plugins/popper.min.js"></script> 
-    <script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script> 
-
+	<script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script> 
+	<script>
+		$(document).keydown(function (event) {
+			if (event.keyCode == 123)
+				return false;
+		});
+	</script>
     <!-- Style Switcher (REMOVE ON YOUR PRODUCTION SITE) -->
     <script src="assets/js/demo/style-switcher.js"></script>     
     
